# falsa

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  Python.yml
python/falsa/: __init__.py  app.py  local_fs.py  utils.py
src/: lib.rs
tests/: tests_main.py
